# yi-fan

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  package.yml
homebrew/: README.md  yi-fan.rb
scripts/: generate-release-notes.mjs  release.mjs  update-homebrew-cask.mjs  updater.mjs
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/keys/: README.md  yi-fan.key.pub
src-tauri/src/: clipboard.rs  lang_detect.rs  lib.rs  main.rs  screenshot.rs  tray.rs
src/__tests__/: configSchema.test.ts  errors.test.ts  glossary.test.ts  historyQuery.test.ts  hotkeys.test.ts  localDict.test.ts  naming.test.ts  onboarding.test.ts  openaiCompat.test.ts  textChunk.test.ts  textLimit.test.ts  theme.test.ts  translateError.test.ts
src/components/: ActionBar.vue  AppFooter.vue  AppHeader.vue  DragHandle.vue  EngineBar.vue  OnboardingModal.vue  TextInput.vue  TextOutput.vue
src/layouts/: DefaultLayout.vue
src/router/: index.ts
src/services/: configSchema.ts  errors.ts  glossary.ts  health.ts  history.ts  hotkeys.ts  http.ts  localDict.ts  network.ts  ocr.ts  onboarding.ts  theme.ts  tts.ts  update.ts  windowState.ts
src/services/ocr/: index.ts  (+1 more)
src/stores/: settings.ts  translate.ts
src/styles/: fonts.css
src/utils/: historyQuery.ts  naming.ts  progress.ts  textChunk.ts  textLimit.ts
src/views/: HistoryView.vue  RecognizeView.vue  ScreenshotView.vue  SettingsView.vue  TranslateView.vue
(+37 files in other folders)
