[package]
name = "yi-fan"
version = "0.0.3"
description = "易翻 - A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "yi_fan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-global-shortcut = "2.3.1"
screenshots = "0.8"
image = "0.25"
base64 = "0.22"
dirs = "5"
selection = "1.2.0"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
lingua = { version = "1.6", default-features = false, features = ["chinese", "english", "japanese", "korean", "french", "german", "spanish", "russian", "portuguese", "italian", "dutch", "arabic"] }
tauri-plugin-autostart = "2"

